--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
           <!-- Блок со ссылками на соц.сети -->
           <div class="footer-sn">
-            <p class="footer-sn-title">присоединяйтесь</p>
+            <p class="footer-titles">присоединяйтесь</p>
             <ul class="footer-circle-icons">
               <li class="footer-sn-items">
                 <a href="" class="circle-button footer-circle-button">
@@ -490,6 +490,29 @@
               </li>
             </ul>
           </div>
+
+          <!-- Блок с подпиской на рассылку -->
+          <div class="footer-subscribe">
+            <form>
+              <p class="footer-titles">Подпишитесь на рассылку</p>
+              <div role="group" class="footer-sub-main">
+                <label>
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="footer-sub-field"
+                  />
+                </label>
+                <button type="submit" class="footer-sub-btn">
+                  Подписаться
+                  <svg class="clients-icon-logo" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send-footer"></use>
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -498,28 +521,118 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est hic optio
-          dicta pariatur nostrum sequi aspernatur itaque dolorem veniam delectus
-          voluptatum eveniet ipsa exercitationem velit, sint, blanditiis
-          obcaecati cum dolores, accusamus culpa sed. Facilis fuga incidunt
-          explicabo eaque? Autem nulla quod sapiente, dolores fugit nostrum
-          accusantium architecto reiciendis quia! Earum quae eligendi incidunt
-          assumenda labore debitis molestiae! Itaque blanditiis minus ipsam
-          illum maiores quam ipsa, omnis sapiente aut tempora quia officia
-          explicabo officiis facere, quos tenetur, esse odit saepe laudantium?
-          Iusto incidunt nihil laborum similique nostrum est ratione asperiores
-          quisquam sit? Fuga quisquam quae velit corrupti debitis voluptate
-          quibusdam minus.
-        </p>
+        <form class="modal-form">
+          <p class="modal-header">Оставьте свои данные, мы вам перезвоним</p>
+
+          <!-- Вводим имя -->
+
+          <div class="group-fields">
+            <label class="modal-labels" for="name">
+              <span class="modal-label-text">Имя</span>
+            </label>
+
+            <div class="group-input">
+              <input class="modal-input" type="text" name="name" id="name" />
+
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-name-modal"></use>
+              </svg>
+            </div>
+
+            <!-- Вводим телефон -->
+
+            <label class="modal-labels" for="tel">
+              <span class="modal-label-text">Телефон</span>
+            </label>
+
+            <div class="group-input">
+              <input class="modal-input" type="tel" name="tel" id="tel" />
+
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-modal"></use>
+              </svg>
+            </div>
+
+            <!-- Вводим почту -->
+
+            <label class="modal-labels" for="email">
+              <span class="modal-label-text">Почта</span>
+            </label>
+
+            <div class="group-input">
+              <input class="modal-input" type="email" name="email" id="email" />
+
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-envelop-modal"></use>
+              </svg>
+            </div>
+
+            <!-- Вводим комментарий -->
+
+            <label class="modal-labels comments" for="feedback">
+              <span class="modal-label-text">Комментарий</span>
+            </label>
+
+            <textarea
+              class="modal-input text-feedback"
+              name="feedback"
+              rows="5"
+              placeholder="Введите текст"
+              id="feedback"
+            ></textarea>
+          </div>
+
+          <!-- Согласие на рассылку. Принимаются условия договора -->
+
+          <label class="modal-agree">
+            <input
+              class="modal-checkbox"
+              type="checkbox"
+              name="agreement"
+              value="reading"
+            />
+
+            <svg class="modal-checked-icon" width="16" height="15">
+              <use href="./images/icons.svg#icon-check-modal-new"></use>
+            </svg>
+            <svg class="modal-checkbox-icon" width="16" height="15">
+              <use href="./images/icons.svg#icon-check-modal-empty"></use>
+            </svg>
+
+            <span class="modal-agree-text">
+              Соглашаюсь с рассылкой и принимаю
+              <a href="" class="modal-agree-link">Условия договора</a>
+            </span>
+          </label>
+
+          <!-- Кнопка отправки формы -->
+
+          <button type="submit" class="modal-send-btn">Отправить</button>
+        </form>
+
+        <!-- Кнопка закрытия модального окна  -->
+
         <button class="modal-close-button" data-modal-close>
-          <svg class="modal-close-svg" width="30" height="30">
-            <use href="./images/logo-svg/symbol-defs.svg#icon-close"></use>
+          <svg class="modal-close-svg" width="18" height="18">
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
     </div>
 
     <script src="./js/modal.js"></script>
+
+    <!-- <script>
+      (() => {
+        document
+          .querySelector('.js-speaker-form')
+          .addEventListener('submit', e => {
+            e.preventDefault();
+            new FormData(e.currentTarget).forEach((value, name) =>
+              console.log(`${name}: ${value}`),
+            );
+          });
+      })();
+    </script> -->
   </body>
 </html>
