add correct portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -340,33 +340,30 @@
             <!--Контактная информация-->
             <address class="footer-address">
               <!-- Физический адрес -->
-              <p class="footer-address-map">
-                <a
-                  href="https://goo.gl/maps/JUrXiFq32XLz6EwXA"
-                  class="footer-address-link"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
-              </p>
+
+              <a
+                href="https://goo.gl/maps/JUrXiFq32XLz6EwXA"
+                class="footer-address-link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
 
               <!-- Электронная почта -->
-              <p>
-                <a href="mailto:info@devstudio.com" class="footer-email"
-                  >info@devstudio.com</a
-                >
-              </p>
+
+              <a href="mailto:info@devstudio.com" class="footer-email"
+                >info@devstudio.com</a
+              >
 
               <!-- Телефон -->
-              <p>
-                <a href="tel:+380961111111" class="footer-tel"
-                  >+38 096 111 11 11</a
-                >
-              </p>
+
+              <a href="tel:+380961111111" class="footer-tel"
+                >+38 096 111 11 11</a
+              >
             </address>
           </div>
 
           <!-- Блок со ссылками на соц.сети -->
           <div class="footer-sn">
-            <h3 class="footer-sn-title">присоединяйтесь</h3>
+            <p class="footer-titles">присоединяйтесь</p>
             <ul class="footer-circle-icons">
               <li class="footer-sn-items">
                 <a href="" class="circle-button footer-circle-button">
@@ -397,6 +394,29 @@
                 </a>
               </li>
             </ul>
+          </div>
+
+          <!-- Блок с подпиской на рассылку -->
+          <div class="footer-subscribe">
+            <form>
+              <p class="footer-titles">Подпишитесь на рассылку</p>
+              <div class="footer-sub-main">
+                <label>
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="footer-sub-field"
+                  />
+                </label>
+                <button type="submit" class="footer-sub-btn">
+                  Подписаться
+                  <svg class="clients-icon-logo" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send-footer"></use>
+                  </svg>
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
