correct files html and css

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
               <a
                 href="https://goo.gl/maps/JUrXiFq32XLz6EwXA"
                 class="footer-address-link"
+                target="_blank"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
 
